fix overflow

--- a/src/flows/flowComponents/author/style.scss
+++ b/src/flows/flowComponents/author/style.scss
@@ -3,7 +3,7 @@
 .author {
     display: flex;
     width: 100%;
-    overflow: ellipsis;
+    overflow: hidden;
 
     .link-button {
         display: flex;
